scripts/k8s/envvar/v1/4container_other_than_v1/3_deploy1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: my-dep
    prohibit2: value2
  name: my-dep
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-dep
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: my-dep
        prohibit4: any
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
